<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ftpix</groupId>
    <artifactId>SpendSpentSpent</artifactId>
    <version>68</version>

    <properties>
        <automatioon.skip>true</automatioon.skip>
        <jooq.skip>true</jooq.skip>
    </properties>

<!--
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
-->

    <scm>
        <url>https://github.com/lamarios/SpendSpentSpent</url>
        <connection>scm:git:https://github.com/lamarios/SpendSpentSpent.git</connection>
        <developerConnection>scm:git:git@github.com:lamarios/SpendSpentSpent.git</developerConnection>
    </scm>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
            <version>6.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>6.0.3</version>
        </dependency>

        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-boot-starter</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>3.0.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine -->
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.j256.ormlite/ormlite-jdbc -->
        <dependency>
            <groupId>com.j256.ormlite</groupId>
            <artifactId>ormlite-jdbc</artifactId>
            <version>5.7</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.200</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.9.1</version>
        </dependency>
        <!-- Handling annoying exceptions in streams
        https://github.com/pivovarit/ThrowingFunction
        -->
        <dependency>
            <groupId>pl.touk</groupId>
            <artifactId>throwing-function</artifactId>
            <version>1.3</version>
        </dependency>


        <dependency>
            <groupId>com.mashape.unirest</groupId>
            <artifactId>unirest-java</artifactId>
            <version>1.4.9</version>
        </dependency>

        <!--<dependency>-->
        <!--<groupId>me.xdrop</groupId>-->
        <!--<artifactId>fuzzywuzzy</artifactId>-->
        <!--<version>1.1.9</version>-->
        <!--</dependency>-->

        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.simplejavamail</groupId>
            <artifactId>simple-java-mail</artifactId>
            <version>6.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.simplejavamail</groupId>
            <artifactId>batch-module</artifactId>
            <version>6.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
            <scope>compile</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.31</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jooq/jooq -->
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
            <version>3.17.6</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.30</version>
        </dependency>

        <dependency>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>versions-maven-plugin</artifactId>
            <version>2.14.1</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <!--<plugin>-->
            <!--<groupId>org.lesscss</groupId>-->
            <!--<artifactId>lesscss-maven-plugin</artifactId>-->
            <!--<configuration>-->
            <!--<sourceDirectory>${project.build.sourceDirectory}/assets/less</sourceDirectory>-->
            <!--<outputDirectory>${project.build.resources[0].directory}/public/stylesheets-->
            <!--</outputDirectory>-->
            <!--<compress>true</compress>-->
            <!--<includes>-->
            <!--<include>main.less</include>-->
            <!--</includes>-->
            <!--&lt;!&ndash;<excludes>&ndash;&gt;-->
            <!--&lt;!&ndash;<exclude>variables.less</exclude>&ndash;&gt;-->
            <!--&lt;!&ndash;</excludes>&ndash;&gt;-->
            <!--</configuration>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<goals>-->
            <!--<goal>compile</goal>-->
            <!--</goals>-->
            <!--<phase>compile</phase>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--</plugin>-->
            <!--
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-resources-plugin</artifactId>
                            <configuration>
                                <nonFilteredFileExtensions>
                                    <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
                                    <nonFilteredFileExtension>woff</nonFilteredFileExtension>
                                    <nonFilteredFileExtension>woff2</nonFilteredFileExtension>
                                    <nonFilteredFileExtension>eot</nonFilteredFileExtension>
                                    <nonFilteredFileExtension>svg</nonFilteredFileExtension>
                                </nonFilteredFileExtensions>
                            </configuration>
                        </plugin>
            -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>build-info</id>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <systemPropertyVariables>
                        <buildDirectory>${project.build.directory}</buildDirectory>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <!-- Specify the maven code generator plugin -->
                <!-- Use org.jooq            for the Open Source Edition
                         org.jooq.pro        for commercial editions,
                         org.jooq.pro-java-6 for commercial editions with Java 6 support,
                         org.jooq.trial      for the free trial edition
                     Note: Only the Open Source Edition is hosted on Maven Central.
                           Import the others manually from your distribution -->
                <groupId>org.jooq</groupId>
                <artifactId>jooq-codegen-maven</artifactId>
                <version>3.15.5</version>

                <executions>
                    <execution>
                        <id>jooq-codegen</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration xmlns="http://www.jooq.org/xsd/jooq-codegen-3.15.0.xsd">
                            <skip>${jooq.skip}</skip>
                            <jdbc>
                                <driver>com.mysql.cj.jdbc.Driver</driver>
                                <url>jdbc:mysql://localhost:3306/sss?useSSL=false&amp;allowPublicKeyRetrieval=true</url>
                                <user>root</user>
                                <password>password</password>
                            </jdbc>

                            <generator>
                                <database>
                                    <!-- The database type. The format here is:
                                         org.jooq.meta.[database].[database]Database -->
                                    <name>org.jooq.meta.mysql.MySQLDatabase</name>

                                    <!-- The database schema (or in the absence of schema support, in your RDBMS this
                                         can be the owner, user, database name) to be generated -->
                                    <inputSchema>sss</inputSchema>

                                    <!-- All elements that are generated from your schema
                                         (A Java regular expression. Use the pipe to separate several expressions)
                                         Watch out for case-sensitivity. Depending on your database, this might be important! -->
                                    <includes>.*</includes>

                                    <!-- All elements that are excluded from your schema
                                         (A Java regular expression. Use the pipe to separate several expressions).
                                         Excludes match before includes, i.e. excludes have a higher priority -->
                                    <excludes></excludes>

                                </database>

                                <strategy>
                                    <matchers>
                                        <schemas>
                                            <schema>
                                                <schemaClass>
                                                    <!-- The optional transform element lets you apply a name transformation algorithm
                                                         to transform the actual database name into a more convenient form. Possible values are:

                                                         - AS_IS               : Leave the database name as it is             : MY_name => MY_name
                                                         - LOWER               : Transform the database name into lower case  : MY_name => my_name
                                                         - LOWER_FIRST_LETTER  : Transform the first letter into lower case   : MY_name => mY_name
                                                         - UPPER               : Transform the database name into upper case  : MY_name => MY_NAME
                                                         - UPPER_FIRST_LETTER  : Transform the first letter into upper case   : my_NAME => My_NAME
                                                         - CAMEL               : Transform the database name into camel case  : MY_name => myName
                                                         - PASCAL              : Transform the database name into pascal case : MY_name => MyName -->
                                                    <transform>UPPER</transform>

                                                    <!-- The mandatory expression element lets you specify a replacement expression to be used when
                                                         replacing the matcher's regular expression. You can use indexed variables $0, $1, $2. -->
                                                    <expression>$0</expression>
                                                </schemaClass>
                                            </schema>
                                        </schemas>
                                    </matchers>
                                </strategy>

                                <generate/>

                                <target>
                                    <!-- The destination package of your generated classes (within the destination directory) -->
                                    <packageName>com.ftpix.sss.dsl</packageName>

                                    <!-- The destination directory of your generated classes. Using Maven directory layout here -->
                                    <directory>${basedir}/src/main/java</directory>
                                </target>
                            </generator>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
